# chunkr

./: .gitignore  README.md  hello.py  pnpm-lock.yaml  pyproject.toml  self-deployment.md
apps/web/: .eslintrc.cjs  eslint.config.mjs  index.html  package.json
apps/web/src/: index.css  main.tsx
chunkmydocs/: .env.loc  Cargo.toml
chunkmydocs/migrations/2024-08-25-203508_adding-ingestion-tables/: down.sql  up.sql
chunkmydocs/src/: lib.rs
docker/chunkmydocs/: Dockerfile
docker/fast/: Dockerfile
docker/high-quality/: Dockerfile
docker/pdf/: Dockerfile
extraction/: Cargo.toml
extraction/src/: lib.rs  main.rs
kube/cert/: clusterissuer.yaml
kube/gcp/: managed-cert.yaml
loadtesting/: package.json
loadtesting/src/: index.ts  models.ts
loadtesting_structured_extract/: structured_index.ts
pyscripts/: api.py  main.py  test_pdla.py
services/internVL/: config.json  main.py  message.txt  pyproject.toml
services/layout-parser/: README.md  main.py  pyproject.toml
services/minicpm/: README.md  hello.py  main.py  pyproject.toml
services/ocr_server/: .gitignore  Cargo.toml  readme.md
services/ocr_server/models/: pyproject.toml
services/ocr_server/setup/: main.py  pyproject.toml
services/ocr_server/src/: lib.rs  main.rs
services/ocr_server/src/routes/: health.rs
services/paddle-structure/: main.py  pyproject.toml  slop.txt
services/pdf/: test.py
services/table-ocr/: pyproject.toml
services/table-ocr/table_ocr/: main.py
services/table-ocr/table_ocr/utils/: table_extraction.py
services/task/: .dockerignore  main.py
(+46 files in other folders)
