[package]
name = "ocr-server"
version = "0.1.0"
edition = "2021"

[features]
gpu = ["candle-core/cuda"]

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.2" }
candle-onnx = "0.7.2"
env_logger = "0.11.5"
